--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <header>
         <img src="images/note.png" alt="" />
-        <h1>Shopping List</h1>
+        <h1 id="app-title">Shopping List</h1>
       </header>
       <form id="item-form">
         <div class="form-control">
@@ -76,6 +76,6 @@
       <button id="clear" class="btn-clear">Clear All</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
